<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.example.buran.mymusicapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_playlist"
            style="@style/CategoryStyle"
            android:text="@string/category_my_playlist" />

        <TextView
            android:id="@+id/my_collection"
            style="@style/CategoryStyle"
            android:text="@string/category_my_collection" />

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:text="@string/category_artists" />

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/dowload_songs"
            style="@style/CategoryStyle"
            android:text="@string/category_download_songs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/recently_played" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:paddingLeft="@dimen/standart"
            android:text="@string/text_for_main_text" />

        <LinearLayout style="@style/ImageLayout">

            <ImageButton
                style="@style/ImageButtonStyle"
                android:src="@drawable/image_1" />

            <ImageButton
                style="@style/ImageButtonStyle"
                android:src="@drawable/image_2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/title_text_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/standart"
            android:text="Here will be a player some day"
            android:textColor="@color/primary_color" />
    </LinearLayout>
</LinearLayout>


